--- a/styles.scss
+++ b/styles.scss
@@ -1,5 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 
+@mixin subNavBar{
+    width: 100vw;
+    background-color: #38a3a5;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 40px;
+    padding: 10px 0px;
+    border-top: 2px solid rgba(255, 255, 255, 0.7);
+}
+
 body{
     margin: 0px;
     font-family: "Bai Jamjuree", sans-serif;
@@ -33,6 +45,28 @@ body{
             justify-content: space-evenly;
             align-items: center;
             color: white;
+        }
+
+        .Projects{
+            width: 100vw;
+
+            .ProjectsNavBar{
+                @include subNavBar()
+            }
+        }
+
+        .Materials{
+
+            .MaterialsNavBar{
+                @include subNavBar()
+            }
+        }
+
+        .Personal{
+
+            .PersonalNavBar{
+                @include subNavBar()
+            }
         }
     }
 }
