--- a/styles.scss
+++ b/styles.scss
@@ -15,22 +15,35 @@
 body{
     margin: 0px;
     font-family: "Bai Jamjuree", sans-serif;
+    background-color: #c7f9cc;
 }
 
 .container{
+    width: 100vw;
+    height: 100vh;
 
     .Login{
         width: 100vw;
         height: 100vh;
         display: flex;
-        flex-direction: column;
-        align-items: center;
         justify-content: center;
-        gap: 10px;
+        align-items: center;
 
-        H1{
-            font-size: 45px;
-            margin: 0px;
+        form{
+            width: 50vw;
+            height: 70vh;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            gap: 10px;
+            background-color: #22577a;
+            border-radius: 35px;
+            box-shadow: 0px 0px 15px 15px rgba(0, 0, 0, 0.3);
+            H1{
+                font-size: 45px;
+                margin: 0px;
+            }
         }
     }
 
@@ -68,5 +81,22 @@ body{
                 @include subNavBar()
             }
         }
+    }
+}
+
+.ErrorPage{
+    margin: 0px;
+    background-color: tomato;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    
+    h1{
+        font-size: 50px;
+        margin: 0px;
     }
 }
