--- a/styles.scss
+++ b/styles.scss
@@ -58,6 +58,12 @@ body{
             justify-content: space-evenly;
             align-items: center;
             color: white;
+
+            .sesion{
+                display: flex;
+                align-items: center;
+                gap: 10px;
+            }
         }
 
         .Projects{
@@ -87,6 +93,22 @@ body{
                 justify-content: center;
                 align-items: center;
                 gap: 15px;
+
+                .LI{
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+                    width: 50vw;
+                    justify-content: space-between;
+                    padding: 0px 30px;
+                    border: 1px solid #023047;
+
+                    .Buttons{
+                        display: flex;
+                        align-items: center;
+                        gap: 10px;
+                    }
+                }
             }
         }
     }
