Modals de personal
Comportamiento de todos los modals del apartado de personal funcionando, falta agregar funcionalidad y definir contenido del modal de edicion

--- a/styles.scss
+++ b/styles.scss
@@ -137,6 +137,11 @@ body{
     overflow-y: scroll;
     gap: 10px;
     
+    .Buttons{
+        display: flex;
+        gap: 10px;
+    }
+
     h3{
         margin: 0px;
     }
