--- a/styles.scss
+++ b/styles.scss
@@ -123,10 +123,9 @@ body{
 }
 
 .Modal{
-    width: 50%;
-    height: 80%;
-    background-color: rgba(255, 255, 255, 0.9);
-    backdrop-filter: blur(10px);
+    width: 50vw;
+    height: 80vh;
+    background-color: white;
     border: 1px solid black;
     position: absolute;
     margin-top: 30px;
@@ -136,7 +135,32 @@ body{
     align-items: center;
     overflow-y: scroll;
     gap: 10px;
-    
+
+    .Select{
+        display: flex;
+        // flex-direction: column;
+        align-items: start;
+        p{
+            color: rgb(118, 118, 118);
+            font-weight: 500;
+            font-size: 16px;
+        }
+    }
+
+    .header{
+        display: flex;
+        align-items: center;
+        width: calc(100% - 30px);
+        justify-content: space-between;
+        padding: 0px 15px;
+    }
+
+    .info{
+        display: flex;
+        gap: 5px;
+        align-items: center;
+    }
+
     .Buttons{
         display: flex;
         gap: 10px;
