--- a/styles.scss
+++ b/styles.scss
@@ -25,6 +25,32 @@
     }
 }
 
+@mixin subModal{
+    padding: 0px 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+    width: calc(50% - 30px);
+    overflow-y: scroll;
+
+    h3{
+        align-self: flex-start;
+    }
+}
+
+@mixin Select{
+    display: flex;
+    align-items: center;
+    gap: 5px;
+
+        p{
+            color: rgb(118, 118, 118);
+            font-weight: 500;
+            font-size: 16px;
+        }
+}
+
 body{
     margin: 0px;
     font-family: "Bai Jamjuree", sans-serif;
@@ -137,14 +163,7 @@ body{
     gap: 10px;
 
     .Select{
-        display: flex;
-        // flex-direction: column;
-        align-items: start;
-        p{
-            color: rgb(118, 118, 118);
-            font-weight: 500;
-            font-size: 16px;
-        }
+        @include Select()
     }
 
     .header{
@@ -172,5 +191,56 @@ body{
 
     h1{
         font-size: 40px;
+    }
+}
+
+.ModalDual{
+    width: 80vw;
+    height: 80vh;
+    background-color: white;
+    position: absolute;
+    margin-top: 30px;
+    border: 1px solid black;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    overflow-y: scroll;
+    gap: 10px;
+
+    .content{
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        height: 90%;
+
+        .divider{
+            width: 1px;
+            height: 90%;
+            background-color: black;
+            align-self: center;
+        }
+
+        .left{
+            @include subModal();
+        }
+
+        .right{
+            @include subModal();
+
+            .Select{
+                @include Select();
+                margin: 0px;
+            }
+        }
+    }
+
+    .Buttons{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        height: 20%;
+        width: 100%;
     }
 }
