--- a/styles.scss
+++ b/styles.scss
@@ -31,11 +31,16 @@
     flex-direction: column;
     align-items: center;
     justify-content: start;
-    width: calc(50% - 30px);
+    width: calc(60% - 30px);
     overflow-y: scroll;
 
     h3{
         align-self: flex-start;
+    }
+
+    .Accordion{
+        width: 90%;
+        box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.2);
     }
 }
 
@@ -90,18 +95,18 @@ body{
 
         .NavBar{
             width: 100vw;
-            height: 60px;
-            background-color: #38a3a5;
+            height: 40px;
+            box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.2);
             display: flex;
             flex-direction: row;
             justify-content: space-evenly;
             align-items: center;
-            color: white;
+            color: black;
 
-            .sesion{
+            .Buttons{
                 display: flex;
                 align-items: center;
-                gap: 10px;
+                gap: 15px;
             }
         }
 
@@ -169,9 +174,15 @@ body{
     .header{
         display: flex;
         align-items: center;
-        width: calc(100% - 30px);
+        width: calc(100% - 120px);
         justify-content: space-between;
-        padding: 0px 15px;
+        padding: 0px 60px;
+
+        .category{
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
     }
 
     .info{
@@ -223,15 +234,11 @@ body{
 
         .left{
             @include subModal();
+            width: 40%
         }
 
         .right{
             @include subModal();
-
-            .Select{
-                @include Select();
-                margin: 0px;
-            }
         }
     }
 
