Avances a los modals de proyecto
agregado desplegable para asignar personal a cada proyecto y acordeon para visualizar materiales usados en cada proyecto en el modal de visualizar informacion

--- a/styles.scss
+++ b/styles.scss
@@ -196,6 +196,16 @@ body{
         gap: 10px;
     }
 
+    .staffSelect{
+        display: flex;
+        flex-direction: row;
+        gap: 15px;
+
+        .select{
+            width: 130px;
+        }
+    }
+
     h3{
         margin: 0px;
     }
