agregar materiales a un nuevo proyecto y correccion de errores
corregido el error que permite agregar mas de una vez seguida al mismo material o staff al proyecto.

--- a/styles.scss
+++ b/styles.scss
@@ -202,7 +202,17 @@ body{
         gap: 15px;
 
         .select{
-            width: 130px;
+            width: 200px;
+        }
+    }
+
+    .materialSelect{
+        display: flex;
+        flex-direction: row;
+        gap: 15px;
+
+        .select{
+            width: 200px;
         }
     }
 
@@ -212,6 +222,11 @@ body{
 
     h1{
         font-size: 40px;
+    }
+
+    h4{
+        margin: 5px 10px;
+        text-align: center;
     }
 }
 
