--- a/styles.scss
+++ b/styles.scss
@@ -18,6 +18,7 @@
     justify-content: space-between;
     padding: 0px 20px;
     border-radius: 15px;
+    box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.2);
 
     .Buttons{
         display: flex;
@@ -134,6 +135,37 @@ body{
                 @include LI();
             }
         }
+
+        .IdTypes{
+            @include pages();
+        }
+
+        .SiteStates{
+            @include pages();
+        }
+
+        .ProjectRoles{
+            @include pages();
+        }
+
+        .ProjectStates{
+            @include pages();
+
+            .LI{
+                @include LI();
+                margin: 10px;
+                align-items: center
+            }
+        }
+
+        .IdTypes{
+            @include pages();
+
+            .Buttons{
+                display: flex;
+                gap: 15px;
+            }
+        }
     }
 }
 
@@ -168,6 +200,7 @@ body{
     align-items: center;
     overflow-y: scroll;
     gap: 10px;
+    box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.2);
 
     .Select{
         @include Select()
@@ -252,6 +285,8 @@ body{
     align-items: center;
     overflow-y: scroll;
     gap: 10px;
+    box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.2);
+    border-radius: 15px;
 
     .content{
         display: flex;
