--- a/styles.scss
+++ b/styles.scss
@@ -230,6 +230,11 @@ body{
     box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.2);
     padding-bottom: 25px;
 
+    .NewLine{
+        display: flex;
+        align-items: center;
+    }
+
     .fields{
         width: 50%;
     }
@@ -368,5 +373,36 @@ body{
         gap: 10px;
         height: 20%;
         width: 100%;
+    }
+}
+
+.Report{
+    width: 90%;
+}
+
+table{
+    border-collapse: collapse;
+    width: 70%;
+    margin: 15px;
+    margin-top: 0px;
+    border: 1px solid black;
+    border-radius: 15px;
+    overflow: hidden;
+
+    tr{
+        .cat{
+            width: 25%;
+            text-align: center;
+        }
+    }
+
+    th{
+        background-color: lightgray;
+        margin: 0px;
+    }
+
+    td{
+        border: 1px solid black;
+        border-spacing: 0;
     }
 }
