--- a/styles.scss
+++ b/styles.scss
@@ -363,20 +363,6 @@ body{
 
         .right{
             @include subModal();
-
-            .report{
-                // background-color: red;
-                width: 90%;
-                display: flex;
-                align-items: center;
-                justify-content: space-evenly;
-                border: 1px solid black;
-                
-                .buttons{
-                    // height: 50%;
-                    // background-color: blue;
-                }
-            }
         }
     }
 
@@ -390,8 +376,21 @@ body{
     }
 }
 
-.Report{
+.ReportListItem{
     width: 90%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    border: 1px solid black;
+    border-radius: 10px;
+
+    h3{color: black;}
+
+    .Buttons{
+        width: 20%;
+        text-align: center;
+    }
 }
 
 table{
@@ -402,6 +401,11 @@ table{
     border: 1px solid black;
     border-radius: 15px;
     overflow: hidden;
+
+    .options{
+        width: 15%;
+        text-align: center;
+    }
 
     tr{
         .cat{
