--- a/styles.scss
+++ b/styles.scss
@@ -327,6 +327,12 @@ body{
     }
 }
 
+.full{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+}
+
 .ModalDual{
     width: 80vw;
     height: 80vh;
@@ -374,9 +380,15 @@ body{
         height: 20%;
         width: 100%;
     }
+
+    .modalButtons{
+        position: relative;
+        bottom: 15px;
+    }
 }
 
 .ReportListItem{
+    margin: 5px;
     width: 90%;
     display: flex;
     flex-direction: row;
