--- a/styles.scss
+++ b/styles.scss
@@ -409,7 +409,6 @@ body{
 }
 
 table{
-    border-collapse: collapse;
     width: 70%;
     max-width: 70%;
     margin: 15px;
@@ -417,13 +416,14 @@ table{
     border: 1px solid black;
     border-radius: 15px;
     overflow: hidden;
-
+border-spacing: 0;
     .options{
         width: 15%;
         text-align: center;
     }
 
     tr{
+        border-collapse: collapse;
         .cat{
             width: 25%;
             text-align: center;
@@ -443,10 +443,11 @@ table{
         background-color: lightgray;
         margin: 0px;
         max-width: 70%;
-
+        border-collapse: collapse;
     }
 
     td{
+        border-collapse: collapse;
         border: 1px solid black;
         border-spacing: 0;
         table-layout: fixed;
