Modulo principal del control de usuarios terminado

--- a/styles.scss
+++ b/styles.scss
@@ -193,6 +193,14 @@ body{
                 @include LI();
             }
         }
+
+        .Users{
+            @include pages();
+
+            .LI{
+                @include LI();
+            }
+        }
     }
 }
 
