--- a/styles.scss
+++ b/styles.scss
@@ -463,3 +463,10 @@ border-spacing: 0;
         white-space: initial;
     }
 }
+
+.Permissions{
+    width: 80%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
