Modulo de profile completado, Modal de editar perfil todavia no esta listo.

--- a/styles.scss
+++ b/styles.scss
@@ -189,6 +189,14 @@ body{
             }
         }
 
+        .Profile{
+            @include pages();
+
+            h3{
+                margin: 0px
+            }
+        }
+
         .ReportLinesCategories{
             @include pages();
 
